@@ -16,9 +16,9 @@ import (
 // init registers the MetricSet with the central registry.
 // The New method will be called after the setup of the module and before starting to fetch data
 func init() {
-	if err := mb.Registry.AddMetricSet("aerospike", "namespace", New); err != nil {
-		panic(err)
-	}
+	mb.Registry.MustAddMetricSet("aerospike", "namespace", New,
+		mb.DefaultMetricSet(),
+	)
 }
 
 // MetricSet type defines all fields of the MetricSet
